[gd_scene load_steps=11 format=3 uid="uid://bplyv1s1vnmw5"]

[ext_resource type="Shader" uid="uid://b8s1f03pckj5x" path="res://scripts/flashlight_mask.gdshader" id="1_tcgap"]
[ext_resource type="Texture2D" uid="uid://ctrq6c2to8vrw" path="res://assets/temp/room_views/intro_phone.png" id="2_mow6j"]
[ext_resource type="Script" uid="uid://cscvrnbxf6wko" path="res://scripts/room_scripts/intro_phone_script.gd" id="3_mow6j"]
[ext_resource type="PackedScene" uid="uid://bwumcsru8q88u" path="res://scenes/clicker_button.tscn" id="3_p5xkb"]
[ext_resource type="FontFile" uid="uid://dy5663vj1t44k" path="res://assets/fonts/PixelifySans-Bold.ttf" id="4_36hww"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0cpwa"]
shader = ExtResource("1_tcgap")
shader_parameter/flashlight_distance = 100.0
shader_parameter/dark_color = Vector4(0, 0.016, 0.071, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ex3ef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ivimn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q23t2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dghyd"]

[node name="roomTexture" type="TextureRect"]
material = SubResource("ShaderMaterial_0cpwa")
texture = ExtResource("2_mow6j")
expand_mode = 1
script = ExtResource("3_mow6j")
metadata/_edit_lock_ = true

[node name="roomButtons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="phoneButton" parent="roomButtons" instance=ExtResource("3_p5xkb")]
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Answer the phone"
button_id = "answer_phone"

[node name="callButton1" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_1"

[node name="callButton2" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_2"

[node name="callButton3" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_3"

[node name="callButton4" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_4"

[node name="callButton5" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_5"

[node name="callButton6" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_6"

[node name="callButton7" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_7"

[node name="callButton8" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_8"

[node name="callButton9" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "Continue call"
button_id = "call_line_9"

[node name="endCallButton" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 334.0
offset_top = 168.0
offset_right = 647.0
offset_bottom = 350.0
hover_text = "End call"
button_id = "end_call"

[node name="keysButton" parent="roomButtons" instance=ExtResource("3_p5xkb")]
visible = false
layout_mode = 0
offset_left = 664.0
offset_top = 263.0
offset_right = 765.0
offset_bottom = 329.0
hover_text = "Take keys"
button_id = "take_keys"

[node name="backButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -39.0
offset_right = 77.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.8509804, 0.7254902, 0.50980395, 1)
theme_override_colors/font_outline_color = Color(0, 0.015686275, 0.07058824, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_36hww")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxEmpty_ex3ef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ivimn")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q23t2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_dghyd")
text = "BACK"
flat = true
